<resources>
    <string name="app_name">OfflineBudgetTrackerAppProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_hint">Enter date</string>
    <string name="store_name_hint">StoreName</string>
    <string name="product_name_hint">ProductName</string>
    <string name="product_type_hint">ProductType</string>
    <string name="price_hint">Price</string>
    <string name="empty">Enter information</string>
    <string name="product_queqy_hint">Enter product type</string>
    <string name="store_query_hint">Enter store name</string>
    <string name="new_budget_tracker_income_date_hint">Enter date</string>
    <string name="new_budget_tracker_income_category_hint">Enter category</string>
    <string name="new_budget_tracker_income_amount_hint">Enter amount</string>
    <string name="new_budget_tracker_bank_name_hint">Enter bank name</string>
    <string name="new_budget_tracker_bank_balance_hint">Enter bank balance</string>
    <string name="new_budget_tracker_date_hint">Enter date</string>
    <string name="new_budget_tracker_store_name_hint">Enter store name</string>
    <string name="new_budget_tracker_product_name_hint">Enter product name</string>
    <string name="new_budget_tracker_product_type_hint">Enter product type</string>
    <string name="new_budget_tracker_price_hint">Enter price</string>
    <string name="bank_query_hint">Search by bank name</string>
    <string name="income_query_hint">Search by income</string>
    <string name="bank_qurey_hint">Search by bank name</string>
    <string name="radio_search_name">Enter a search word</string>
    <string name="enter_date_from">Enter date (from)</string>
    <string name="enter_date_to">Enter date (to)</string>
    <string name="enter_word_from">Enter a word (from)</string>
    <string name="enter_word">Enter a word</string>
    <string name="replace_it_with">Replace it with...</string>
    <string name="new_budget_tracker_vat_hint">Enter VAT rate</string>
    <string name="new_budget_tracker_notes_hint">Enter a note</string>
    <string name="calc_result_hint">Calc Result</string>
    <string name="replace_word_hint">Find a word...</string>
    <string name="convert_hint">Converted result here</string>
    <string name="converter_bank_balance">Bank balance</string>
    <string name="converter_current_currency">Currenct currency</string>
    <string name="original_currency_hint">Original currency</string>
    <string name="target_currency_hint">Target currency</string>
    <string name="foreign_currency_price_hint">Foreign currency price</string>
    <string name="your_currency_proce_hint">Your currency price</string>
    <string name="mysql_login_id_hint">Enter your  login id</string>
    <string name="mysql_login_pw_hint">Enter your login password</string>
    <string name="mysql_login_email_hint">Enter your login Email</string>

     <!--    average-->
    <string name="average_btn_name">Average</string>
    <string name="average_search_key_word_hint">Search</string>

    <string name="mysql_transfer_title">MySQL Convert </string>

    <string name="mysql_transfer_original_currency_sum">Original currency</string>
    <string name="mysql_transfer_converted_currency_sum">Converted currency</string>
    <string name="mysql_transfer_origin_convert_sum">Converted sum</string>

    <!--  category items  -->
    <string-array name="category_items">
        <item>Salary</item>
        <item>Merkari</item>
        <item>Book-off</item>
    </string-array>

    <!--  spending type items  -->
    <string-array name="spending_type_items">
        <item>app</item>
        <item>apparel</item>
        <item>bank</item>
        <item>bicycle</item>
        <item>book</item>
        <item>cellphone bill</item>
        <item>communication</item>
        <item>dinner</item>
        <item>domain</item>
        <item>drinks</item>
        <item>drugs</item>
        <item>dvd</item>
        <item>ebook</item>
        <item>e-learning</item>
        <item>e-ticket</item>
        <item>finance</item>
        <item>fitness</item>
        <item>food</item>
        <item>gadget</item>
        <item>game</item>
        <item>groceries</item>
        <item>health</item>
        <item>home</item>
        <item>lifeline</item>
        <item>lunch</item>
        <item>medical</item>
        <item>merch</item>
        <item>plastic bag</item>
        <item>public transportation</item>
        <item>server</item>
        <item>snack</item>
        <item>social</item>
        <item>tax</item>
        <item>toy</item>
        <item>transportation fee</item>
        <item>unknown</item>
        <item>utensils</item>
    </string-array>

    <!--  currency items  -->
    <string-array name="currency_items">
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>SGD</item>
    </string-array>

</resources>