<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddSpendingFragment"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:id="@+id/add_spending_banner"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title_spending"
            android:text="Expense"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sub_title_spending"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/title_spending"
            android:text="Your money, your life"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/shopping_online"
            android:layout_width="62dp"
            android:layout_height="62dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/spd_enter_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_date_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_spending_banner"
        android:drawableStart="@drawable/ic_calendar"
        android:background="@drawable/custom_input"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:drawablePadding="12dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/spd_enter_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_store_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_enter_date"
        android:drawableStart="@drawable/ic_baseline_shopping_cart_24"
        android:background="@drawable/custom_input"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:drawablePadding="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/spd_enter_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_product_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_enter_store_name"
        android:drawableStart="@drawable/ic_product"
        android:background="@drawable/custom_input"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:drawablePadding="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/spd_enter_product_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_product_type_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_enter_product_name"
        android:drawableStart="@drawable/ic_category"
        android:background="@drawable/custom_input"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:drawablePadding="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/spd_enter_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_price_hint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_enter_product_type"
        android:drawableStart="@drawable/ic_money"
        android:background="@drawable/custom_input"
        android:paddingEnd="5dp"
        android:drawablePadding="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/isTaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:text="Is VAT included?"
        android:minHeight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_enter_price"
        android:paddingEnd="5dp"
        android:drawablePadding="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/spd_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isTaxTextView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/spd_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="No" />

        <RadioButton
            android:id="@+id/spd_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes" />


    </RadioGroup>

    <EditText
        android:id="@+id/spd_vat_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_vat_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_radio_group"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/spd_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_edit_note_24"
        android:drawablePadding="12dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_notes_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_vat_rate"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/icm_budget_tracker_spinner"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:layout_marginTop="5dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_notes"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/spd_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@+id/icm_budget_tracker_spinner" />

    <Button
        android:id="@+id/spd_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spd_update_btn"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@+id/spd_save_button" />

    <Button
        android:id="@+id/spd_update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:text="Update"
        app:layout_constraintEnd_toStartOf="@+id/spd_delete_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spd_save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>