<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".view.AddIncomeFragment">

    <RelativeLayout
        android:id="@+id/add_incomes_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title_incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Incomes"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/sub_title_incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_incomes"
            android:layout_marginTop="6dp"
            android:text="Your money, your life"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/rich" />

    </RelativeLayout>

    <EditText
        android:id="@+id/icm_enter_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/new_budget_tracker_date_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_incomes_banner"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/icm_enter_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_category"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_income_category_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_enter_date"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/icm_enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_income_amount_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_enter_category_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/icm_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_edit_note_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/new_budget_tracker_notes_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_enter_amount"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/icm_budget_tracker_spinner"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_notes"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/icm_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_budget_tracker_spinner" />

    <Button
        android:id="@+id/icm_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner"
        android:text="Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toEndOf="@+id/icm_update_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_save_button" />

    <Button
        android:id="@+id/icm_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icm_delete_button"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icm_save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>