<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MysqlSpendingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/search_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_search"
                android:layout_marginTop="6dp"
                android:text="Your money, your life"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/search_icon" />

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/search_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/search_radio_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Store name" />

            <RadioButton
                android:id="@+id/search_radio_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product name" />

            <RadioButton
                android:id="@+id/search_radio_product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product type" />

        </RadioGroup>

        <EditText
            android:id="@+id/search_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/radio_search_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_radio_group" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/stats_table_row"
            >

            <TableRow>

                <EditText
                    android:id="@+id/search_date_from_txt"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/enter_date_from"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/home_radio_search_date_from_txt"
                    app:layout_constraintTop_toBottomOf="@+id/home_radio_search_name"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/search_date_to_txt"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/enter_date_to"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@+id/stats_search_date_from_txt"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_search_name"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>
            <TableRow android:layout_marginTop="8dp">

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:text="Search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_table_row"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/search_calc_result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_money"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/calc_result_hint"
            android:inputType="textPersonName"
            android:minHeight="30dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"

            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ListView
            android:id="@+id/search_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>